Splitted settings from box controller + fixed preview header multiple on scroll events

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Settings.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Settings.cshtml
@@ -2,10 +2,10 @@
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
 @using Zbang.Zbox.Infrastructure.Enums
-<form novalidate ng-submit="b.updateBox(updateBoxForm)" name="updateBoxForm" class="text-capitalize">
+<form ng-controller="BoxSettingsController as bs" novalidate ng-submit="bs.updateBox(updateBoxForm)" name="updateBoxForm" class="text-capitalize">
     <md-input-container>
         <label>@BoxResources.Name</label>
-        <input type="text" autocomplete="off" name="name" ng-model="b.settings.name" required md-no-asterisk/>
+        <input type="text" autocomplete="off" name="name" ng-model="bs.settings.name" required md-no-asterisk/>
         <div ng-messages="updateBoxForm.name.$error" ng-show="updateBoxForm.name.$dirty">
             <div ng-message="required">@GeneralResources.RequiredField</div>
         </div>
@@ -14,18 +14,18 @@
     <div layout="row" layout-wrap ng-if="b.isAcademic">
         <md-input-container flex="100" flex-gt-md="33" class="padding">
             <label>@BoxResources.Number</label>
-            <input type="text" autocomplete="off" name="number" ng-model="b.settings.courseId" />
+            <input type="text" autocomplete="off" name="number" ng-model="bs.settings.courseId" />
         </md-input-container>
 
         <md-input-container flex="100" flex-gt-md="66">
             <label>@BoxResources.Lecturer</label>
-            <input type="text" autocomplete="off" name="lecturer" ng-model="b.settings.professorName" />
+            <input type="text" autocomplete="off" name="lecturer" ng-model="bs.settings.professorName" />
         </md-input-container>
     </div>
     <div layout="row" ng-if="!b.isAcademic && b.owner">
         <md-input-container flex="100">
             <label>@BoxResources.Privacy</label>
-            <md-select name="notification" ng-model="b.settings.privacy" md-container-class="dd-list" ng-model-options="{trackBy: '$value'}">
+            <md-select name="notification" ng-model="bs.settings.privacy" md-container-class="dd-list" ng-model-options="{trackBy: '$value'}">
                 <md-option value="@BoxPrivacySetting.AnyoneWithUrl.GetStringValueLowercase()">@BoxPrivacySetting.AnyoneWithUrl.GetEnumDescription()</md-option>
                 <md-option value="@BoxPrivacySetting.MembersOnly.GetStringValueLowercase()">@BoxPrivacySetting.MembersOnly.GetEnumDescription()</md-option>
             </md-select>
@@ -34,7 +34,7 @@
     <div layout="row" layout-wrap>
         <md-input-container flex="100" flex-gt-md="33" class="padding">
             <label>@BoxResources.Notify</label>
-            <md-select name="notification" ng-model="b.settings.notificationSettings" md-container-class="dd-list" ng-model-options="{trackBy: '$value'}">
+            <md-select name="notification" ng-model="bs.settings.notificationSettings" md-container-class="dd-list" ng-model-options="{trackBy: '$value'}">
                 <md-option value="@NotificationSetting.Off.GetStringValueLowercase()">@NotificationSetting.Off.GetEnumDescription()</md-option>
                 @*<md-option value="@NotificationSettings.OnEveryChange.GetStringValueLowerCase()">@NotificationSettings.OnEveryChange.GetEnumDescription()</md-option>*@
                 <md-option value="@NotificationSetting.OnceADay.GetStringValueLowercase()">@NotificationSetting.OnceADay.GetEnumDescription()</md-option>
@@ -44,14 +44,14 @@
 
         <md-input-container flex="100" flex-gt-md="33">
             <label>@BoxResources.Status</label>
-            <md-select name="follow" ng-model="b.settings.needFollow" md-container-class="dd-list">
+            <md-select name="follow" ng-model="bs.settings.needFollow" md-container-class="dd-list">
                 <md-option ng-value="false">@BoxResources.Follow</md-option>
                 <md-option ng-value="true">@BoxResources.Unfollow</md-option>
             </md-select>
         </md-input-container>
         <md-input-container layout="row" layout-align="end center" flex="100" flex-gt-md="33">
             <button type="button" scroll-to-top class="cancel-btn" ng-click="b.settingsOpen = false" ga-track-event="['box-settings', 'cancel']">@GeneralResources.Cancel</button>
-            <button type="submit" class="action-btn space-before" ng-disabled="b.settings.submitDisabled || !updateBoxForm.$valid" ga-track-event="['box-settings', 'save']">@GeneralResources.SaveChanges</button>
+            <button type="submit" class="action-btn space-before" ng-disabled="bs.settings.submitDisabled || !updateBoxForm.$valid" ga-track-event="['box-settings', 'save']">@GeneralResources.SaveChanges</button>
         </md-input-container>
     </div>
 </form>
