class choose html

--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -30,3 +30,16 @@
         <div class="number"></div>
     </div>
 </div>
+
+<div>
+    <!--Artboard 1 copy 5-->
+    <h1></h1>
+    <h2></h2>
+    <div>
+        <div class="counter header">
+            <div class="text"></div>
+            <div class="progress"></div>
+        </div>
+        <div class="boxes"></div>
+    </div>
+</div>
