more work on course choose

--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -40,6 +40,38 @@
             <div class="text"></div>
             <div class="progress"></div>
         </div>
-        <div class="boxes"></div>
+        <div class="boxes">
+            <div class="selected">
+                <div class="name"></div>
+            </div>
+            <div class="empty">
+                <div class="name"></div>
+            </div>
+        </div>
     </div>
+    <button type="submit"></button>
+</div>
+
+
+<div>
+    <!--Artboard 1 copy 4-->
+    <h1></h1>
+    <div class="department"></div>
+    <form name="classChooseFrom" novalidate ng-submit="cc.classSearch" layout="row" layout-wrap>
+
+        <div>
+            <div class="title"></div>
+            <input type="text" />
+        </div>
+        <div>
+            <div class="title"></div>
+            <input type="text" />
+        </div>
+        <div>
+            <div class="title"></div>
+            <input type="text" />
+        </div>
+        <button type="button"></button>
+        <button type="submit"></button>
+    </form>
 </div>
