course choose continued

--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -1,6 +1,6 @@
 ﻿<div>
     <!--Artboard 1 copy / copy 7 / copy 8 -->
-    <h1></h1><!-- header changes according to step (copy / copy 7 / copy 8) -->
+    <h1>Let us help you find the classes you are taking</h1><!-- header changes according to step (copy / copy 7 / copy 8) -->
     <h1></h1>
     <h1></h1>
     <form name="classChooseFrom" novalidate ng-submit="cc.classSearch" layout="row" layout-wrap>
@@ -10,13 +10,15 @@
             <md-icon md-svg-icon="t:searchIcon"></md-icon>
         </button>
     </form>
-    <div>
-        <img src="" />
-        <div class="text"></div>
-    </div>
-    <div class="empty-state">
-        <div class="text"></div>
-        <button type="button" class="create-class"></button>
+    <div class="content">
+        <div>
+            <img src="@Url.CdnContent("/Images/Site/search_uni.png?v=3")" />
+            <div class="text"></div>
+        </div>
+        <div class="empty-state">
+            <div class="text">Advance to the next level...</div>
+            <button type="button" class="create-class"></button>
+        </div>
     </div>
 </div>
 
