--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -1,12 +1,20 @@
-﻿<div>
+﻿<div>xx</div>
+{{cc.stepTitle}}
+<ng-pluralize class="title" count="cc.stepTitle" when="{
+               '1' : 'Let us help you find the classes you are taking',
+               '2' : 'Select your first class',
+               '3' : 'One done. One more to go' }">
+    
+</ng-pluralize>
+<div>
     <!--Artboard 1 copy / copy 7 / copy 8 -->
     <h1></h1><!-- header changes according to step (copy / copy 7 / copy 8) -->
     <h1></h1>
     <h1></h1>
-    <form name="classChooseFrom" novalidate ng-submit="cc.classSearch" layout="row" layout-wrap>
+    <form name="classChooseFrom" novalidate ng-submit="cc.classSearch()" layout="row" layout-wrap>
         <input spellcheck="false" autofocus type="search" placeholder="Search by class name or department"
-               ng-model="cc.term" ng-model-options="{debounce : 350}" ng-change="cc.classSearch" ng-minlength="2" />
-        <button type="submit" class="search-button" ng-disabled="!cc.term.length">
+               ng-model="cc.term" ng-model-options="{debounce : 350}" ng-change="cc.classSearch()" ng-minlength="2" required/>
+        <button type="submit" class="search-button" ng-disabled="classChooseFrom.$invalid">
             <md-icon md-svg-icon="t:searchIcon"></md-icon>
         </button>
     </form>
@@ -23,13 +31,13 @@
 <div>
     <!--Artboard 1 copy 6-->
     <h1></h1>
-    <form name="classChooseFrom" novalidate ng-submit="cc.universitySearch" layout="row" layout-wrap>
+    @*<form name="classChooseFrom" novalidate ng-submit="cc.universitySearch" layout="row" layout-wrap>
         <input spellcheck="false" autofocus ng-disabled="cc.createUniversity" type="search" placeholder="Search by class name or department"
                ng-model="cc.term" ng-model-options="{debounce : 350}" ng-change="cc.universitySearch(libraryChooseForm)" ng-minlength="2" />
         <button type="submit" class="search-button" ng-disabled="!cc.term.length">
             <md-icon md-svg-icon="t:searchIcon"></md-icon>
         </button>
-    </form>
+    </form>*@
     <div class="result">
         <h2 class="course-name"></h2>
         <div class="instructor"></div>
@@ -64,7 +72,7 @@
     <!--Artboard 1 copy 4-->
     <h1></h1>
     <div class="department"></div>
-    <form name="classChooseFrom" novalidate ng-submit="cc.classSearch" layout="row" layout-wrap>
+    <form @*name="classChooseFrom"*@ novalidate @*ng-submit="cc.classSearch"*@ layout="row" layout-wrap>
 
         <div>
             <div class="title"></div>
