--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -9,5 +9,42 @@
     .content {
         max-width: 600px;
         margin: 0 auto;
+
+        img {
+            margin: 40px auto 0 auto;
+            display: block;
+        }
+    }
+
+    .search-form {
+        border-radius: 15px;
+        overflow: hidden;
+        margin-bottom: 30px;
+        max-width: 600px;
+        margin: 0 auto;
+        box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.42);
+
+        input {
+            background: @textColorWhite;
+            font-size: 20px;
+            height: 37px;
+            padding: 0 10px 0 25px;
+            width: ~"calc(100% - 60px)";
+            border: 0;
+        }
+    }
+
+
+
+    .search-button {
+        background: @buttonColorBlue;
+        width: 60px;
+        line-height: 100%;
+
+        svg {
+            width: 22px;
+            height: 22px;
+            fill: @textColorWhite;
+        }
     }
 }
