--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -1,19 +1,14 @@
-﻿<div>xx</div>
-{{cc.stepTitle}}
-<ng-pluralize class="title" count="cc.stepTitle" when="{
+﻿<div>
+    <ng-pluralize class="title" count="cc.stepTitle" when="{
                '1' : 'Let us help you find the classes you are taking',
                '2' : 'Select your first class',
                '3' : 'One done. One more to go' }">
-    
-</ng-pluralize>
-<div>
+
+    </ng-pluralize>
     <!--Artboard 1 copy / copy 7 / copy 8 -->
-    <h1>Let us help you find the classes you are taking</h1><!-- header changes according to step (copy / copy 7 / copy 8) -->
-    <h1></h1>
-    <h1></h1>
-    <form name="classChooseFrom" novalidate ng-submit="cc.classSearch()" layout="row" layout-wrap>
+    <form class="search-form" name="classChooseFrom" novalidate ng-submit="cc.classSearch()" layout="row" layout-wrap>
         <input spellcheck="false" autofocus type="search" placeholder="Search by class name or department"
-               ng-model="cc.term" ng-model-options="{debounce : 350}" ng-change="cc.classSearch()" ng-minlength="2" required/>
+               ng-model="cc.term" ng-model-options="{debounce : 350}" ng-change="cc.classSearch()" ng-minlength="2" required />
         <button type="submit" class="search-button" ng-disabled="classChooseFrom.$invalid">
             <md-icon md-svg-icon="t:searchIcon"></md-icon>
         </button>
