--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -31,20 +31,13 @@
         </div>
     </div>
 
-    <div ng-switch-when="2">
+    <div ng-switch-multiple-when="[2,4]" @*ng-switch-when-separator="|"*@>
         <!--Artboard 1 copy 6-->
         <h1></h1>
-        @*<form name="classChooseFrom" novalidate ng-submit="cc.universitySearch" layout="row" layout-wrap>
-                <input spellcheck="false" autofocus ng-disabled="cc.createUniversity" type="search" placeholder="Search by class name or department"
-                       ng-model="cc.term" ng-model-options="{debounce : 350}" ng-change="cc.universitySearch(libraryChooseForm)" ng-minlength="2" />
-                <button type="submit" class="search-button" ng-disabled="!cc.term.length">
-                    <md-icon md-svg-icon="t:searchIcon"></md-icon>
-                </button>
-            </form>*@
-        <div class="result">
-            <h2 class="course-name"></h2>
-            <div class="instructor"></div>
-            <div class="number"></div>
+        <div class="result" ng-repeat="c in cc.searchResult track by c.id" ng-click="cc.chose(c)">
+            <h2 class="course-name" ng-bind="::c.name"></h2>
+            <div class="instructor" ng-bind="::c.professor"></div>
+            <div class="number" ng-bind="::c.courseCode"></div>
         </div>
     </div>
 
@@ -58,16 +51,16 @@
                 <div class="progress"></div>
             </div>
             <div class="boxes">
-                <div class="selected">
-                    <div class="name"></div>
+                <div class="selected" ng-repeat="c in ::cc.selectedCourses track by c.id">
+                    <div class="name" ng-bind="::c.name"></div>
                 </div>
-                <div class="empty">
-                    <div class="name"></div>
+                <div class="empty" ng-repeat="i in cc.getRemainingElement() track by $index">
+                    <div class="name">{{$index + cc.selectedCourses.length}}</div>
                 </div>
             </div>
         </div>
-        <button class="select-more" type="button"></button>
-        <button class="done" type="submit"></button>
+        <button class="select-more" type="button" ng-click="cc.step = cc.step + 1">Select another class</button>
+        <button class="done" type="submit" ng-if="cc.step === 5"></button>
     </div>
 
 
