--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
@@ -4,20 +4,61 @@
     margin-left: -95px;
   }
 }
+.class-choose .title {
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  display: block;
+  font-size: 32px;
+  padding: 50px 0;
+  font-weight: bold;
+  color: #33076e;
+}
+@media (max-width: 600px) {
+  .class-choose .title {
+    font-size: 24px;
+    max-width: 360px;
+    padding: 0 0 10px 0;
+  }
+}
 .class-choose .content {
   max-width: 600px;
   margin: 0 auto;
+  text-align: center;
 }
 .class-choose .content img {
   margin: 40px auto 0 auto;
   display: block;
+}
+.class-choose .content .search-image {
+  position: relative;
+  display: inline-block;
+}
+.class-choose .content .search-image .text {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  font-size: 20px;
+  color: #4190b9;
+}
+.class-choose .content.search-results .wrapper {
+  padding: 8px;
+}
+.class-choose .content.search-results .wrapper .result {
+  height: auto;
+  padding: 10px 15px;
+  text-align: right;
+}
+.class-choose .content.search-results .wrapper .result .course-name {
+  margin: 0 auto 5px auto;
 }
 .class-choose .search-form {
   border-radius: 15px;
   overflow: hidden;
   margin-bottom: 30px;
   max-width: 600px;
-  margin: 0 auto;
+  margin: 0 auto 8px auto;
   box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.42);
 }
 .class-choose .search-form input {
@@ -28,12 +69,12 @@
   width: calc(100% - 60px);
   border: 0;
 }
-.class-choose .search-button {
+.class-choose .search-form .search-button {
   background: #4190b9;
   width: 60px;
   line-height: 100%;
 }
-.class-choose .search-button svg {
+.class-choose .search-form .search-button svg {
   width: 22px;
   height: 22px;
   fill: #ffffff;
