--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -1,54 +1,50 @@
-﻿    <ng-pluralize class="title" count="cc.stepTitle" when="{
+﻿<ng-pluralize class="title" count="cc.stepTitle" when="{
                '1' : 'Let us help you find the classes you are taking',
                '2' : 'Select your first class',
                '3' : 'Good job!',
                '4' : 'One done. One more to go!',
                '5' : '' }">
-    </ng-pluralize>
-<form name="classChooseFrom" novalidate ng-submit="cc.classSearch()" layout="row" layout-wrap>
+</ng-pluralize>
+<form class="search-form" name="classChooseFrom" novalidate ng-submit="cc.classSearch()" layout="row" layout-wrap>
     <input spellcheck="false" autofocus type="search" placeholder="Search by class name or department"
-           ng-model="cc.term" ng-model-options="{debounce : 350}" ng-change="cc.classSearch()" ng-minlength="2" required/>
+           ng-model="cc.term" ng-model-options="{debounce : 350}" ng-change="cc.classSearch()" ng-minlength="2" required />
     <button type="submit" class="search-button" ng-disabled="classChooseFrom.$invalid">
         <md-icon md-svg-icon="t:searchIcon"></md-icon>
     </button>
 </form>
 <div ng-switch="2">
-    <div ng-switch-when="1">
+    <div ng-switch-when="1" class="content">
         <!--Artboard 1 copy / copy 7 / copy 8 -->
-        <h1>Let us help you find the classes you are taking</h1><!-- header changes according to step (copy / copy 7 / copy 8) -->
-        <h1></h1>
-        <h1></h1>
 
-        <div class="content">
-            <div>
-                <img src="@Url.CdnContent("/Images/Site/search_uni.png?v=3")" />
-                <div class="text"></div>
-            </div>
-            <div class="empty-state">
-                <div class="text">Advance to the next level...</div>
-                <button type="button" class="create-class"></button>
-            </div>
+        <div class="search-image">
+            <img src="@Url.CdnContent("/Images/Site/search_uni.png?v=3")" />
+            <div class="text">Advance to the next level...</div>
+        </div>
+        <div class="empty-state">
+            <div class="text"></div>
+            <button type="button" class="create-class"></button>
         </div>
     </div>
 
-    <div ng-switch-when="2">
+    <div ng-switch-when="2" layout="row" layout-padding layout-wrap class="content search-results">
         <!--Artboard 1 copy 6-->
-        <h1></h1>
-        @*<form name="classChooseFrom" novalidate ng-submit="cc.universitySearch" layout="row" layout-wrap>
-                <input spellcheck="false" autofocus ng-disabled="cc.createUniversity" type="search" placeholder="Search by class name or department"
-                       ng-model="cc.term" ng-model-options="{debounce : 350}" ng-change="cc.universitySearch(libraryChooseForm)" ng-minlength="2" />
-                <button type="submit" class="search-button" ng-disabled="!cc.term.length">
-                    <md-icon md-svg-icon="t:searchIcon"></md-icon>
-                </button>
-            </form>*@
-        <div class="result">
-            <h2 class="course-name"></h2>
-            <div class="instructor"></div>
-            <div class="number"></div>
+        <div class="wrapper" flex="50" flex-xs="100">
+            <div class="result box-style">
+                <h2 class="course-name" d-color="{{::box.name.length}}">Philosophy</h2>
+                <div class="number">123456</div>
+                <div class="instructor">instructor</div>
+            </div>
+        </div>
+        <div class="wrapper" flex="50" flex-xs="100">
+            <div class="result box-style">
+                <h2 class="course-name" d-color="{{::box.name.length}}">Philosophy</h2>
+                <div class="number">123456</div>
+                <div class="instructor">instructor</div>
+            </div>
         </div>
     </div>
 
-    <div ng-switch-when="3">
+    <div ng-switch-when="3" class="content">
         <!--Artboard 1 copy 5-->
         <h1></h1>
         <h2></h2>
@@ -71,7 +67,7 @@
     </div>
 
 
-    <div ng-switch-when="4">
+    <div ng-switch-when="4" class="content">
         <!--Artboard 1 copy 4-->
         <h1></h1>
         <div class="department"></div>
@@ -94,7 +90,7 @@
         </form>
     </div>
 
-    <div ng-switch-when="5">
+    <div ng-switch-when="5" class="content">
         <!--Artboard 1 copy 3-->
         <h1></h1>
         <div class="department"></div>
