--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -12,7 +12,7 @@
         <md-icon md-svg-icon="t:searchIcon"></md-icon>
     </button>
 </form>
-<div ng-switch="2">
+<div ng-switch="cc.step">
     <div ng-switch-when="1" class="content">
         <!--Artboard 1 copy / copy 7 / copy 8 -->
 
@@ -29,7 +29,7 @@
     <div ng-switch-multiple-when="[2,4]" layout="row" layout-padding layout-wrap class="content search-results">
         <!--Artboard 1 copy 6-->
         <div class="wrapper" flex="50" flex-xs="100">
-            <div class="resul box-stylet" ng-repeat="c in cc.searchResult track by c.id" ng-click="cc.chose(c)">
+            <div class="result box-style" ng-repeat="c in cc.searchResult track by c.id" ng-click="cc.chose(c)">
                 <h2 class="course-name" d-color="{{::box.name.length}}" ng-bind="::c.name"></h2>
                 <div class="number" ng-bind="::c.courseCode"></div>
                 <div class="instructor" ng-bind="::c.professor"></div>
@@ -39,8 +39,6 @@
 
     <div ng-switch-when="3" class="content">
         <!--Artboard 1 copy 5-->
-        <h1></h1>
-        <h2></h2>
         <div>
             <div class="counter header">
                 <div class="text"></div>
