--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -59,6 +59,11 @@
                     .course-name {
                         margin: 0 auto 5px auto;
                     }
+
+                    .number, .instructor {
+                        min-height: 14px;
+                        line-height: 14px;
+                    }
                 }
             }
         }
