--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -28,9 +28,9 @@
 
     <div ng-switch-multiple-when="[2,4]" layout="row" layout-padding layout-wrap class="content search-results">
         <!--Artboard 1 copy 6-->
-        <div class="wrapper" flex="50" flex-xs="100">
-            <div class="result box-style" ng-repeat="c in cc.searchResult track by c.id" ng-click="cc.chose(c)">
-                <h2 class="course-name" d-color="{{::box.name.length}}" ng-bind="::c.name"></h2>
+        <div class="wrapper" ng-repeat="c in cc.searchResult track by c.id" flex="50" flex-xs="100">
+            <div class="result box-style" ng-click="cc.chose(c)">
+                <h2 class="course-name ellipsis" d-color="{{::c.name.length}}" ng-bind="::c.name"></h2>
                 <div class="number" ng-bind="::c.courseCode"></div>
                 <div class="instructor" ng-bind="::c.professor"></div>
             </div>
