--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -38,9 +38,7 @@ x
         </div>
     </div>
 
-    <div ng-switch-when="[3,5]" class="content">
-    <div ng-switch-when="3" class="content selected-boxes">
-     yead
+    <div ng-switch-when="[3,5]" class="content selected-boxes">
         <!--Artboard 1 copy 5-->
             <div class="counter header">
                 <div class="text"></div>
