--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -5,8 +5,7 @@
                '4' : 'One done. One more to go!',
                '5' : '' }">
 </ng-pluralize>
-x
-<form class="search-form" name="classChooseFrom" novalidate ng-submit="cc.classSearch()" layout="row" layout-wrap>
+<form ng-show="[1,2,4].indexOf(cc.step) !== -1" class="search-form" name="classChooseFrom" novalidate ng-submit="cc.classSearch()" layout="row" layout-wrap>
     <input spellcheck="false" autofocus type="search" placeholder="Search by class name or department"
            ng-model="cc.term" ng-model-options="{debounce : 350}" ng-change="cc.classSearch()" ng-minlength="2" required />
     <button type="submit" class="search-button" ng-disabled="classChooseFrom.$invalid">
@@ -38,11 +37,11 @@ x
         </div>
     </div>
 
-    <div ng-switch-when="[3,5]" class="content selected-boxes">
+    <div ng-switch-multiple-when="[3,5]" class="content selected-boxes">
         <!--Artboard 1 copy 5-->
             <div class="counter header">
                 <div class="text"></div>
-                <div class="progress">/2</div>
+                <div class="progress">{{::cc.selectedCourses.length}}/2</div>
             </div>
             <div class="boxes" layout="row" layout-padding layout-wrap>
                 <div class="wrapper" flex="50" flex-xs="100" ng-repeat="c in ::cc.selectedCourses track by c.id">
@@ -52,9 +51,10 @@ x
                         <div class="instructor" ng-bind="::c.professor"></div>
                     </div>
                 </div>
-                <div class="wrapper" flex="50" flex-xs="100" ng-repeat="i in cc.getRemainingElement() track by $index">
+                
+                <div class="wrapper" flex="50" flex-xs="100" ng-repeat="i in ::cc.getRemainingElement() track by $index">
                     <div class="empty box-style">
-                        <h2 class="course-name ellipsis">{{$index + cc.selectedCourses.length}}</h2>
+                        <h2 class="course-name ellipsis" ng-bind="::$index + cc.selectedCourses.length + 1"></h2>
                     </div>
                 </div>
             </div>
