--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -61,7 +61,7 @@
         </div>
         <div class="buttons">
             <button class="select-more action-btn" type="button" ng-click="cc.chooseMore()">Select another class</button>
-            <button class="done action-btn" type="submit" ng-if="cc.step === 5"></button>
+            <button class="done action-btn" type="submit" ng-if="cc.step === 5">Done</button>
         </div>
     </div>
     <div ng-switch-when="7" class="content add-class">
