--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
@@ -76,6 +76,27 @@
   background: #eeeeee;
   color: #888b8e;
 }
+.class-choose .content.selected-boxes .empty:hover {
+  background: #eeeeee;
+}
+.class-choose .content.selected-boxes .buttons {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.class-choose .content.selected-boxes .buttons button {
+  margin: 8px;
+}
+.class-choose .content.selected-boxes .buttons button.done {
+  background: #ec610d;
+}
+.class-choose .content.selected-boxes .buttons button.done:hover {
+  background: #d5580c;
+}
 .class-choose .content.add-class .department {
   margin-bottom: 30px;
 }
