--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
@@ -42,10 +42,6 @@
   font-size: 20px;
   color: #4190b9;
 }
-.class-choose .content.default .empty-state .text {
-  margin: 50px 0 14px 0;
-  font-size: 16px;
-}
 .class-choose .content .box-style {
   padding: 10px 15px;
   text-align: left;
@@ -63,6 +59,13 @@
   height: auto;
   padding: 10px 15px;
   text-align: left;
+}
+.class-choose .content.search-results .empty-state {
+  margin: 0 auto;
+}
+.class-choose .content.search-results .empty-state .text {
+  margin: 50px 0 14px 0;
+  font-size: 16px;
 }
 .class-choose .content.selected-boxes .empty {
   display: -webkit-flex;
@@ -100,12 +103,8 @@
 .class-choose .content.add-class .department {
   margin-bottom: 30px;
 }
-.class-choose .content.add-class .box-style,
 .class-choose .content.add-class form {
   margin: 0 auto;
-}
-.class-choose .content.add-class .box-style {
-  height: 50px;
 }
 .class-choose .content.add-class .form-field input {
   height: auto;
@@ -120,6 +119,38 @@
 .class-choose .content.add-class .buttons {
   text-align: right;
   margin-top: 30px;
+}
+.class-choose .content.add-class .box-style,
+.class-choose .content.select-department .box-style {
+  height: 50px;
+  margin: 0 auto;
+}
+.class-choose .content.select-department .add-department button {
+  width: 100%;
+  padding: 0 10px;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.class-choose .content.select-department .add-department button md-icon {
+  width: 16px;
+  height: 16px;
+  fill: #4190b9;
+}
+.class-choose .content.select-department .add-department button h2 {
+  color: #4190b9;
+  font-size: 16px;
+  height: auto;
+  margin: 0 10px;
+}
+.class-choose .content.select-department .buttons {
+  text-align: right;
+  padding: 8px;
+  margin-top: 50px;
 }
 .class-choose .search-form {
   border-radius: 15px;
