--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.rtl.css
@@ -125,6 +125,19 @@
   height: 50px;
   margin: 0 auto;
 }
+@media (max-width: 600px) {
+  .class-choose .content.add-class .box-style,
+  .class-choose .content.select-department .box-style {
+    font-size: 28px;
+    line-height: 30px;
+  }
+}
+@media (max-width: 600px) {
+  .class-choose .content.select-department .department,
+  .class-choose .content.select-department .add-department {
+    padding: 4px 8px;
+  }
+}
 .class-choose .content.select-department .add-department button {
   width: 100%;
   padding: 0 10px;
