--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -14,7 +14,7 @@
         <md-icon md-svg-icon="t:searchIcon"></md-icon>
     </button>
 </form>
-<div @*ng-switch="cc.step"*@ ng-switch="7">
+<div @*ng-switch="cc.step"*@ ng-switch="8">
     <div ng-switch-when="1" class="content default">
         <!--Artboard 1 copy / copy 7 / copy 8 -->
 
@@ -69,7 +69,7 @@
     <div ng-switch-when="8" class="content add-class">
         <!--Artboard 1 copy 4-->
         <h1 class="title">Add "" class to</h1>
-        <div class="department box-style ellipsis" d-color="" flex="50" flex-xs="100">Department</div>
+        <h2 class="department box-style ellipsis" d-color="" flex="50" flex-xs="100">Department</h2>
         <form flex="50" flex-xs="100" @*name="classChooseFrom"*@ novalidate @*ng-submit="cc.classSearch"*@>
             <div class="form-field">
                 <label for="class-name">Class name:</label>
@@ -100,7 +100,7 @@
             <div class="add-department wrapper" flex="50" flex-xs="100">
                 <button type="button" class="box-style">
                     <md-icon md-svg-icon="t:add"></md-icon>
-                    <h2>Add department</h2>
+                    <h2 class="ellipsis">Add department</h2>
                 </button>
             </div>
         </div>
